bk_ida/gccida/c2/cse_main
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_main/src/cse.c:7518:4: error: expected ';' after expression
rtx v14; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_main/src/cse.c:7518:5: error: use of undeclared identifier 'v14'
rtx v14; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_main/src/cse.c:7534:1: error: use of undeclared identifier 'uid_cuid_0'; did you mean 'uid_cuid'?
uid_cuid_0 = v7; 
^~~~~~~~~~
uid_cuid
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_main/src/cse.c:360:13: note: 'uid_cuid' declared here
static int *uid_cuid;
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_main/src/cse.c:7573:7: error: expected expression
swift::warning( 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_main/src/cse.c:7598:1: error: use of undeclared identifier 'v14'
v14 = cse_basic_block( v6, data.last, data.path, after_loop == 0); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_main/src/cse.c:7600:6: error: use of undeclared identifier 'v14'
v6 = v14; 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_main/src/cse.c:7614:7: error: use of undeclared identifier 'uid_cuid_0'; did you mean 'uid_cuid'?
free( uid_cuid_0); 
      ^~~~~~~~~~
      uid_cuid
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_main/src/cse.c:360:13: note: 'uid_cuid' declared here
static int *uid_cuid;
            ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/cse_main/src/obj/cse.o] Error 1
